[gd_scene load_steps=5 format=2]

[ext_resource path="res://Bullets/Pipis/pipis.gd" type="Script" id=1]
[ext_resource path="res://Bullets/Pipis/pipis.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "explode",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
height = 0.0

[node name="Pipis" type="Area2D" groups=["bullets"]]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "explode"

[node name="ExplosionTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[node name="LiveTimer" type="Timer" parent="."]
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[connection signal="timeout" from="ExplosionTimer" to="." method="_on_ExplosionTimer_timeout"]
[connection signal="timeout" from="LiveTimer" to="." method="_on_LiveTimer_timeout"]
